--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@ body {
 
 .content {
     display: grid;
-    grid-template-columns: 1 1fr;
+    grid-template-columns: 1fr;
     grid-template-rows: 9 auto;
     grid-template-areas:
         "header"
