--- a/css/style.css
+++ b/css/style.css
@@ -21,9 +21,8 @@ body {
 
 
 .content {
-    max-width: 100%;
     display: grid;
-    grid-template-columns: minmax(100px, 1fr);
+    grid-template-columns: 1, minmax(100px, 1fr);
     grid-template-rows: 9 auto;
     grid-template-areas:
         "header"
@@ -42,7 +41,7 @@ body {
 .header {
     grid-area: header;
     background-color: var(--color-principal);
-    width: 100%;
+    max-width: 100%;
 
 }
 
@@ -52,11 +51,13 @@ body {
     align-items: center;
     justify-content: space-between;
     padding: 1rem 5rem;
-    width: 100%;
+    max-width: 100%;
 
 }
 
-.menu_navegacion {}
+.menu_navegacion {
+    width: 100%;
+}
 
 .menu_navegacion ul {
     list-style: none;
@@ -184,10 +185,7 @@ img {
     height: auto;
 }
 
-.barra_menu {
-    padding: 1rem 5rem;
-    width: 100%;
-}
+
 
 @media (max-width: 600px) {
     .barra_menu {
