--- a/css/style.css
+++ b/css/style.css
@@ -42,8 +42,28 @@ body {
     grid-area: header;
     background-color: var(--color-principal);
 
-
-
+}.barra_menu{
+    background-color: aqua;
+    max-width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 1rem;
+}.menu_navegacion{
+   
+}.menu_navegacion ul{
+    display: flex;
+    justify-content: space-between;
+}.menu_navegacion li{
+    display: flex;
+    gap: 1rem;
+}.menu_navegacion a{
+    text-decoration: none;
+}.name_header{
+    display: flex;
+    gap: 1rem;
+    align-items: center;
+    text-decoration: none;
 }
 
 .presentacion {
